--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -35,3 +35,22 @@
 .right_munu_failed{
     color: red;
 }
+.ant-drawer-body{
+    padding: 0;
+}
+.drawer_munu_item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.drawer_munu_item > .anticon-plus-circle{
+    color: #1ab394;
+    font-size: 16px;
+    transition: all linear 0.2s;
+}
+.drawer_munu_item > .anticon-plus-circle:hover{
+    font-size: 20px;
+}
+.nav_create_note_tip{
+    margin-top: 10px;
+}
