--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -73,3 +73,7 @@
     justify-content: center;
     padding-top: 10px;
 }
+.wastepaper_basketsMenus > .ant-menu-submenu-title{
+    padding-left: 0 !important;
+    margin-left: 11px;
+}
