--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -77,3 +77,8 @@
     padding-left: 0 !important;
     margin-left: 11px;
 }
+.nav_dropdown_menu{
+    font-size: 14px;
+    color: rgba(0,0,0,0.65);
+    padding: 0 20px;
+}
