--- a/app/components/login/Login.css
+++ b/app/components/login/Login.css
@@ -1,5 +1,5 @@
 #login_box{
-    width: 100%;
+    /* width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
@@ -10,7 +10,7 @@
     overflow: auto;
     outline: 0;
     -webkit-overflow-scrolling: touch;
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: rgba(0, 0, 0, 0.65); */
 }
 .login_box_hide{
     display: none;
