--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -18,6 +18,7 @@
 }
 .right_munu_btn{
     margin-right: 10px;
+    margin-left: 10px;
 }
 .right_munu-dropdown-link, .right_munu_icon{
     color: #1ab394;
@@ -81,4 +82,5 @@
     font-size: 14px;
     color: rgba(0,0,0,0.65);
     padding: 0 20px;
+    cursor: pointer;
 }
