--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -115,3 +115,190 @@
 .nav-delete-icon{
     color: #f5222d;
 }
+.nav_top_button-uploader{
+    margin-right: 20px;
+}
+.image-loader-cover{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    overflow: auto;
+    outline: 0;
+    background: rgba(0, 0, 0, 0.65);
+}
+.image-loader-cover-hide{
+    display: none;
+}
+.image-uploader-modal{
+    width: 80%;
+    min-height: 60%;
+    overflow: hidden;
+    background: #fff;
+    margin: auto;
+    margin-top: 50px;
+    border-radius: 4px;
+    position: relative;
+}
+.image-uploader-modal-90{
+    height: 90%;
+}
+.image-uploader-uploader{
+    position: relative;
+    padding: 45px 15px 15px;
+    margin: 15px 0;
+    margin-top: 0;
+    background-color: #fafafa;
+    box-shadow: inset 0 3px 6px rgba(0, 0, 0, .05);
+    border-color: #e5e5e5 #eee #eee;
+    border-style: solid;
+    border-width: 1px 0;
+}
+.image-uploader-area{
+    margin: 20px;
+    border: 3px dashed #e6e6e6;
+    box-sizing: border-box;
+    transition: border-color .3s ease;
+}
+.image-uploader-area:hover{
+    border: 3px dashed #1890ff;
+}
+.image-uploader-placeholder{
+    min-height: 350px;
+    padding-top: 178px;
+    text-align: center;
+    background: url('/images/uploader.png') center 93px no-repeat;
+    color: #cccccc;
+    font-size: 18px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.image-uploader-placeholder button{
+    width: 168px;
+    height: 44px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: relative;
+}
+.image-uploader-close-icon{
+    position: absolute;
+    right: 16px;
+    color: red;
+    top: 16px;
+    z-index: 100;
+    font-size: 30px;
+    cursor: pointer;
+}
+.image-preview-container{
+    width: 100%;
+    height: 100%;
+}
+.image-preview-container h1{
+    font-size: 12px;
+    font-weight: bold;
+    color: #bbb;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 15px;
+}
+.image-preview-filelist{
+    width: 100%;
+    height: calc(100% - 126px);
+    overflow-x: hidden;
+    overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
+}
+.image-preview-file{
+    position: relative;
+    display: flex;
+    width: 232px;
+    height: 260px;
+    flex-direction: column;
+    background-color: #fff;
+    border: 1px solid #ebedf0;
+    margin-top: 24px;
+    margin-left: 24px;
+    border-radius: 2px;
+}
+.image-preview-url{
+    width: 230px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.image-preview-url img{
+    max-width: 100%;
+    max-height: 100%;
+}
+.image-preview-info{
+    width: 100%;
+    border-top: 1px solid #ebedf0;
+    padding: 8px 12px;
+}
+.image-preview-info>div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 3px;
+}
+.image-preview-img-name{
+    font-weight: 500;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    color: #324759;
+    max-width: 180px;
+    font-size: 14px;
+}
+.image-preview-info>div>i{
+    cursor: pointer;
+    font-size: 20px;
+}
+.image-preview-img-size{
+    font-size: 12px;
+    color: #697b8c;
+}
+.image-preview-img-link{
+    font-size: 12px;
+    cursor: pointer;
+}
+.image-preview-footer{
+    width: 100%;
+    height: 63px;
+    border-top: 1px solid #ebedf0;
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 23px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #fff;
+}
+.image-preview-footer-info{
+    font-size: 14px;
+}
+.image-preview-footer-buttons{
+   
+}
+.image-preview-footer-buttons>button{
+    width: 116px;
+    height: 44px;
+    margin-left: 10px;
+}
+.image-uploader-button>input{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: red;
+    opacity: 0;
+}
