--- a/app/components/nav/q.html
+++ b/app/components/nav/q.html
@@ -69,16 +69,23 @@
 			<p></p><span></span>
 		</div>
 	</div>
+	<div class="ant-tooltip  ant-tooltip-placement-bottom  ant-tooltip-hidden"
+		style="left: 178px; top: 1158px; transform-origin: 50% -4px;">
+		<div class="ant-tooltip-content">
+			<div class="ant-tooltip-arrow"></div>
+			<div class="ant-tooltip-inner" role="tooltip"><span>prompt text</span></div>
+		</div>
+	</div>
 	#### Default theme
 
 	- Editor.md theme : `default`
 	- Preview area theme : `default`
 	- Editor area theme : `default`
-	
+
 	> Recommend `dark` theme.
-	
+
 	#### Recommend editor area themes
-	
+
 	- ambiance
 	- eclipse
 	- mdn-like
@@ -86,9 +93,9 @@
 	- monokai
 	- neat
 	- pastel-on-dark
-	
+
 	#### Editor area themes
-	
+
 	- default
 	- 3024-day
 	- 3024-night
