--- a/app/components/nav/Nav.css
+++ b/app/components/nav/Nav.css
@@ -4,6 +4,7 @@
     display: flex;
     align-self: center;
     justify-content: space-between;
+    border-bottom: 1px solid #ddd;
 }
 
 .left_munu {
