--- a/app/App.css
+++ b/app/App.css
@@ -222,12 +222,6 @@ body, button, input, select, textarea {
     font: 12px \5FAE\8F6F\96C5\9ED1, arial, \5b8b\4f53;
 }
 
-.container {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
 .container-box {
     width: 100%;
     height: 100vh;
@@ -238,4 +232,9 @@ body, button, input, select, textarea {
 .animated {
     -webkit-transition: all .5s cubic-bezier(.23, 1, .32, 1) 0ms;
     transition: all .5s cubic-bezier(.23, 1, .32, 1) 0ms;
+}
+.ellipsis{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
