--- a/app/page/index/Index.css
+++ b/app/page/index/Index.css
@@ -1,9 +1,5 @@
 .page_container{
     width: 100%;
     height: 100%;
-}
-.page_content{
-    width: 100%;
-    height: 100%;
-    display: flex;
+    background: #fafafa;
 }
