--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.Header_left{
+.Header_left, .Header_right{
     height: 100%;
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@
 }
 .Header_title{
     display: block;
-    margin-left: 18px;
+    margin-left: 10px;
     max-width: 180px;
     font-size: 18px;
     font-weight: 500;
