--- a/app/components/search/search.css
+++ b/app/components/search/search.css
@@ -6,9 +6,10 @@
   background: #f5f5f5;
   color: #595959;
   border-radius: 4px;
-  margin-left: 40px;
+  margin-left: 90px;
+  overflow: hidden;
 }
-.Search>.Icon{
+.Search i{
   margin-left: 10px;
   margin-right: 10px;
 }
