--- a/app/page/index/Index.css
+++ b/app/page/index/Index.css
@@ -1,5 +1,12 @@
 .page_container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: #fafafa;
+}
+.Content{
+    width: 100%;
+    display: flex;
+    padding: 26px 52px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
