--- a/app/components/sider-bar/index.css
+++ b/app/components/sider-bar/index.css
@@ -1,11 +1,29 @@
-.SiderBar{
-  width: 200px;
+.SiderBar_Layout{
+  width: 206px;
+  flex-shrink: 0;
 }
 .SiderBar_Link{
   display: flex;
   align-items: center;
   height: 40px;
+  margin-bottom: 5px
 }
 .SiderBar_Link>div>i{
   font-size: 20px;
+}
+.SiderBar_Link>span{
+  position: relative;
+  top: -2px;
+  color: #8c8c8c;
+  margin-left: 10px;
+  font-size: 14px;
+}
+.SiderBar_Line{
+  display: block;
+  height: 1px;
+  background: #e8e8e8;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-bottom: 50px;
+  width: 100px;
 }
