--- a/app/components/article-catalog/index.css
+++ b/app/components/article-catalog/index.css
@@ -1,10 +1,12 @@
-.Catalog_container {
-  width: 320px;
+.Article_Catalog_Wrapper {
+  width: 200px;
   height: 100vh;
   overflow: hidden;
   padding-left: 20px;
   background-color: #f9f9f9;
-  position: relative;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .Catalog_title {
