--- a/app/page/index/Index.css
+++ b/app/page/index/Index.css
@@ -1,6 +1,6 @@
-.page_container{
+.Container{
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: #fafafa;
 }
 .Content_Wrapper{
