--- a/app/components/header/header.css
+++ b/app/components/header/header.css
@@ -23,6 +23,9 @@
     display: flex;
     align-items: center;
 }
+.Header_left{
+    padding-left: 12px;
+}
 .Header_left_favicon{
     width: 32px;
     height: 32px;
