--- a/app/components/sider-bar/index.css
+++ b/app/components/sider-bar/index.css
@@ -6,7 +6,9 @@
   display: flex;
   align-items: center;
   height: 40px;
-  margin-bottom: 5px
+  margin-bottom: 5px;
+  padding-left: 15px;
+  box-sizing: border-box;
 }
 .SiderBar_Link>div>i{
   font-size: 20px;
