--- a/app/page/index/Index.css
+++ b/app/page/index/Index.css
@@ -3,7 +3,7 @@
     min-height: 100vh;
     background: #fafafa;
 }
-.Content_Wrapper{
+.Content_Wrapper_Index{
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
