--- a/app/App.css
+++ b/app/App.css
@@ -13,6 +13,9 @@ html, body {
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    font-family: Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+    -webkit-font-smoothing: antialiased;
+    box-sizing: border-box;
 }
 
 article, aside, figure, footer, header, nav, section, details, summary {
