--- a/app/components/avatar/avatar.css
+++ b/app/components/avatar/avatar.css
@@ -6,16 +6,97 @@
   position: relative;
   height: 100%;
 }
-.Avatar_wrapper:hover>.header-user-popover{
-  display: block;
-  -webkit-animation-name: zoomIn;
-  animation-name: zoomIn;
-  animation-duration: 400ms;
-}
 
 .Avatar {
   width: 24px;
   height: 24px;
   border-radius: 100%;
-  margin-right: 7px;
+  margin-right: 4px;
+}
+.header-user-popover {
+  width: 255px;
+  min-height: 211px;
+  border-radius: 4px;
+  padding: 16px 0;
+  box-sizing: border-box;
+  right: 0;
+}
+
+.header-user-popover::before {
+  content: '';
+  width: 11px;
+  height: 11px;
+  border-width: 5px;
+  border-top-left-radius: 2px;
+  margin-top: -1px;
+  position: absolute;
+  background: #ffffff;
+  transform: rotate(45deg);
+  right: 25px;
+  top: -4px;
+  box-shadow: -2px -2px 5px rgba(0, 0, 0, .05);
+}
+
+.header-userpopover-top {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e8e8e8;
+  padding: 0 16px;
+}
+
+.header-userpopover-avatar {
+  width: 42px;
+  height: 42px;
+  border-radius: 100%;
+}
+
+.header-userpopover-info {
+  margin-left: 14px;
+}
+
+.header-userpopover-info>div {
+  font-family: PingFangSC-Medium;
+  font-size: 14px;
+  color: #595959;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+
+.header-userpopover-info>div>span {
+  font-weight: normal;
+  font-family: PingFangSC-Regular;
+}
+
+.header-userpopover-bom{
+  box-sizing: border-box;
+  padding-top: 14px;
+}
+.header-userpopover-link{
+  display: flex;
+  align-items: center;
+  position: relative;
+  height: 32px;
+  margin-bottom: 5px;
+  padding: 0 16px;
+  box-sizing: border-box;
+}
+.header-userpopover-link:hover{
+  background: #f5f5f5;
+}
+.header-userpopover-link>span{
+  margin-left: 11px;
+  color: #595959;
+  font-size: 14px;
+}
+.header-userpopover-link>div{
+  position: relative;
+  top: 1px;
+}
+.header-userpopover-link>div:last-child{
+  position: absolute;
+  top: 9px;
+  right: 16px;
+}
+.Avatar_Down_Icon{
+  transform: scale(.8);
 }
