--- a/app/page/new/index.css
+++ b/app/page/new/index.css
@@ -35,10 +35,14 @@
     color: #262626;
     font-size: 14px;
     margin-bottom: 12px;
+    font-weight: 500;
 }
 .New_Permission{
     padding: 10px 16px;
     position: relative;
+}
+.New_Permission_Mul{
+    background: #f9f9f9;
 }
 .New_Permission>.Icon:first-child{
     margin-right: 12px;
@@ -55,7 +59,48 @@
     position: absolute;
     right: 20px;
 }
-.Dropdown_Overlay>div:hover{
+.New_Permission_Checked{
     background-color: #e9f7ec;
+}
+.New_Permission_Checked>.Icon{
+    color: #25b864;
+}
+.New_Scenes{
+    width: 100%;
+    border-top: 1px solid #e8e8e8;
+    margin-top: 18px;
+    padding-top: 40px;
+    flex-wrap: wrap;
+}
+.New_Scenes_Template{
+    border-top: none;
+    padding-top: 0;
+}
+.New_Input{
+    width: 100%;
+}
+.New_TextArea{
+    width: 100%;
+}
+.New_Button{
+    width: 100%;
+    height: 32px;
+    color: #fff;
+    background-color: #25b864;
+    font-weight: 400;
+    font-size: 14px;
+    border-radius: 4px;
     transition: all linear 0.2s;
+    outline: none;
+    border: 1px solid #25b864;
+}
+.New_Button:hover{
+    background-color: #47c479;
+    border-color: #47c479;
+    border-color: #47c479;
+}
+.New_Button:active{
+    border: none;
+    background-color: #16914f;
+    border-color: #16914f;
 }
