--- a/app/App.css
+++ b/app/App.css
@@ -243,10 +243,10 @@ body, button, input, select, textarea {
     transition: all .35s cubic-bezier(.23, 1, .32, 1) 0ms;
 }
 
-.animated {
+/* .animated {
     -webkit-transition: all .5s cubic-bezier(.23, 1, .32, 1) 0ms;
     transition: all .5s cubic-bezier(.23, 1, .32, 1) 0ms;
-}
+} */
 
 .ellipsis {
     overflow: hidden;
