--- a/app/common/table/index.css
+++ b/app/common/table/index.css
@@ -1,3 +1,35 @@
-.Table{
-  
+.Table {
+  width: 100%;
+  text-align: left;
+  border-collapse: separate;
+  border-spacing: 0;
+  border-left: 1px solid #e8e8e8;
+  border-right: 1px solid #e8e8e8;
+}
+
+.Table_Header {
+  width: 100%;
+  height: 44px;
+  color: #8c8c8c;
+  font-size: 12px;
+  border-radius: 0;
+}
+
+.Table_Header>th {
+  padding: 12px 16px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.Table_Tbody {}
+
+.Table_Tbody>tr>td {
+  padding: 16px 16px;
+  overflow-wrap: break-word;
+  border-bottom: 1px solid #e8e8e8;
+  transition: all .3s, border 0s;
+  background: #ffffff;
+}
+
+.Table_Tbody>tr:hover>td {
+  background: #e9f7ec;
 }
