--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -6,7 +6,7 @@
 }
 
 .Article_Preview_Wrapper {
-  width: calc(100% - 250px - 210px);
+  width: calc(100% - 460px);
   height: calc(100vh - 58px);
   flex-shrink: 0;
   background: #ffffff;
@@ -17,9 +17,9 @@
 }
 
 #editormd {
-  min-height: 800px;
+  min-height: calc(100vh - 260px);
   width: 100vh;
-  height: 100%;
+  /* height: 100%; */
   border: none;
   margin-bottom: 0;
 }
