--- a/app/App.css
+++ b/app/App.css
@@ -224,12 +224,12 @@ button, input[type=button] {
 }
 
 a {
-    color: #666;
+    color: inherit;
     text-decoration: none;
 }
 
 a:hover {
-    color: #ff4c34;
+    color: inherit;
 }
 
 body, button, input, select, textarea {
