--- a/app/common/table/index.css
+++ b/app/common/table/index.css
@@ -20,14 +20,14 @@
   border-bottom: 1px solid #e8e8e8;
 }
 
-.Table_Tbody {}
-
 .Table_Tbody>tr>td {
   padding: 16px 16px;
   overflow-wrap: break-word;
   border-bottom: 1px solid #e8e8e8;
   transition: all .3s, border 0s;
   background: #ffffff;
+  position: relative;
+  color: #666;
 }
 
 .Table_Tbody>tr:hover>td {
