--- a/app/page/index/Index.css
+++ b/app/page/index/Index.css
@@ -9,6 +9,7 @@
     margin: 0 auto;
     display: flex;
     padding: 26px 0;
+    padding-right: 14px;
     box-sizing: border-box;
     overflow: hidden;
     font-size: 14px;
