--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -36,8 +36,8 @@
     display: block;
     margin-left: 10px;
     max-width: 180px;
-    font-size: 18px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 700;
     color: #262626;
 }
 .Article_Header_Edit_Btn{
@@ -90,4 +90,10 @@
 .Article_Header_right>.Popover_Wrapper>.Popover_Wrapper_Content{
     left: -60px;
     top: 56px;
+}
+.Article_Header_Save{
+    line-height: 22px;
+    font-size: 12px;
+    color: #8c8c8c;
+    margin-left: 20px;
 }
