--- a/app/components/login/index.css
+++ b/app/components/login/index.css
@@ -37,14 +37,14 @@
 .Login_submit {
   width: 320px;
   height: 40px;
-  background-color: #25b864;
+  /* background-color: #25b864;
   color: #fff;
   font-weight: 400;
   justify-content: center;
   font-size: 16px;
   border-radius: 4px;
   border: 1px solid #25b864;
-  transition: all linear 0.2s;
+  transition: all linear 0.2s; */
 }
 .Login_submit:active{
   outline: 0;
