:construction: 持续增加功能

--- a/app/components/footer/index.css
+++ b/app/components/footer/index.css
@@ -1,6 +1,7 @@
 .Footer_Wrapper{
   width: 100%;
-  padding: 10px;
+  padding: 10px 0 20px 0;
+  position: relative;
 }
 .Footer_Wrapper_Tip{
   justify-content: center;
