--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -6,21 +6,23 @@
 }
 
 .Article_Preview_Wrapper {
-  /* width: calc(100% - 460px); */
-  width: 100%;
+  width: calc(100% - 460px);
   height: calc(100vh - 58px);
   flex-shrink: 0;
   background: #ffffff;
-  padding-bottom: 100px;
   box-sizing: border-box;
   overflow-y: scroll;
   overflow-x: hidden;
 }
+.Article_Preview_Wrapper_Big{
+  width: calc(100% - 260px);
+}
+.Article_Preview_Wrapper_Big>#editormd>.editormd-preview{
+  width: 100% !important;
+}
 
 #editormd {
   min-height: calc(100vh - 260px);
-  width: 100vh;
-  /* height: 100%; */
   border: none;
   margin-bottom: 0;
 }
@@ -55,7 +57,7 @@
   color: #262626;
   font-weight: 700;
   font-size: 36px;
-  padding-bottom: 16px;
   padding: 16px;
+  padding-bottom: 16px;
   border-bottom: 1px solid #e8e8e8;
 }
