--- a/app/page/index/index.css
+++ b/app/page/index/index.css
@@ -2,7 +2,7 @@
   width: 100%;
   min-height: 100vh;
   background: #fafafa;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 .Content_Wrapper_Index{
   max-width: 1200px;
