--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -21,11 +21,8 @@
   display: flex;
   align-items: center;
 }
-.Recent_Content_Left>div>i{
-  color: rgb(62, 162, 255);
-  font-size: 26px;
-  position: relative;
-    top: 2px;
+.Recent_Content_Left>img{
+  width: 20px;
 }
 .Recent_Content_Left_Info{
   margin-left: 10px;
