--- a/app/index.css
+++ b/app/index.css
@@ -16,6 +16,13 @@ html, body {
     -webkit-text-size-adjust: 100%;
     font-family: Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
     -webkit-font-smoothing: antialiased;
+    color: #595959;
+    font-size: 14px;
+    font-variant: tabular-nums;
+    line-height: 1.5;
+    background-color: #fff;
+    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: "tnum";
 }
 
 article, aside, figure, footer, header, nav, section, details, summary {
