--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -2,8 +2,8 @@
     width: 100%;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,.06);
     background: #ffffff;
-    position: relative;
-    z-index: 11;
+    /* position: relative; */
+    /* z-index: 11; */
 }
 .Article_Header_Wrapper{
     height: 58px;
