--- a/app/components/shortcut-keys/index.css
+++ b/app/components/shortcut-keys/index.css
@@ -1,34 +1,84 @@
-.ShortcutKeys{
+.ShortcutKeys {
   width: 345px;
   height: 100vh;
   overflow-x: hidden;
   overflow-y: scroll;
   background: #ffffff;
-  box-shadow: -2px 0 8px rgba(0,0,0,.15);
+  box-shadow: -2px 0 8px rgba(0, 0, 0, .15);
   position: fixed;
   right: 0;
   top: 0;
-  padding: 0 32px 10px;
+  padding: 0 32px 20px;
+  display: none;
 }
-.ShortcutKeys_close{
-    display: flex;
-    justify-content: flex-end;
-    padding: 14px 0 3px;
-    font-size: 18px;
+
+.ShortcutKeys_close {
+  display: flex;
+  justify-content: flex-end;
+  padding: 14px 0 3px;
+  font-size: 18px;
 }
-.ShortcutKeys>h2{
+
+.ShortcutKeys>h2 {
   font-size: 18px;
   font-weight: 500;
   color: #262626;
   margin-bottom: 20px;
 }
-.ShortcutKeys_Group>h3{
+
+.ShortcutKeys_Group>h3 {
   padding: 8px 0;
   font-weight: 700;
   border-bottom: 1px solid #d9d9d9;
   color: #262626;
   font-size: 14px;
 }
-.ShortcutKeys_Group>div{
+
+.ShortcutKeys_Group>div.flex {
   justify-content: space-between;
+  padding: 10px 0;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.ShortcutKeys_Char>span:first-child {
+  font-size: 17px;
+  margin-right: 12px;
+  margin-left: 5px;
+  position: relative;
+  top: 2px;
+}
+.ShortcutKeys_Char>span:first-child>img{
+  width: 20px;
+  position: relative;
+  top: 1px;
+}
+
+.ShortcutKeys_Char>span:last-child {
+  color: #595959;
+  font-size: 14px;
+}
+
+.ShortcutKeys_key>span{
+  margin-right: 4px;
+  height: 22px;
+  padding: 0 4px;
+  border: none;
+  background-color: #f2f4f5;
+  border-radius: 2px;
+  color: #595959;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+}
+.ShortcutKeys_key>p{
+  font-size: 14px;
+  margin-right: 4px;
+  font-weight: 600;
+  color: #595959;
+}
+.ShortcutKeys_show{
+  display: block;
+  animation-name: slideInRight;
+  animation-duration: 200ms;
 }
