--- a/app/public/css/anima.css
+++ b/app/public/css/anima.css
@@ -143,3 +143,21 @@
   -webkit-animation-name: slideInDown;
   animation-name: slideInDown;
 }
+
+@keyframes slideInRight {
+  from {
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+  }
+
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.slideInRight {
+  -webkit-animation-name: slideInRight;
+  animation-name: slideInRight;
+}
